recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:13: error: Missing closing brace `}' assumed here
}
^